--- a/requirements.txt
+++ b/requirements.txt
@@ -6,36 +6,45 @@
 #
 absl-py==0.8.0            # via tensorboard, tensorflow
 astor==0.8.0              # via tensorflow
-certifi==2019.6.16        # via requests
-chardet==3.0.4            # via requests
+cycler==0.10.0            # via matplotlib
+decorator==4.4.0          # via networkx
 gast==0.3.1               # via tensorflow
 google-pasta==0.1.7       # via tensorflow
 grpcio==1.23.0            # via tensorboard, tensorflow
 h5py==2.10.0              # via keras, keras-applications
-idna==2.8                 # via requests
+imageio==2.5.0            # via imgaug, scikit-image
+imgaug==0.2.9
 importlib==1.0.4
 joblib==0.13.2            # via scikit-learn
 keras-applications==1.0.8  # via keras, tensorflow
 keras-preprocessing==1.1.0  # via keras, tensorflow
 keras==2.2.5
+kiwisolver==1.1.0         # via matplotlib
 markdown==3.1.1           # via tensorboard
+matplotlib==3.1.1         # via imgaug, scikit-image
+networkx==2.3             # via scikit-image
 numpy==1.16.3
 opencv-contrib-python-headless==4.1.0.25
+opencv-python==4.1.1.26   # via imgaug
+pillow==6.1.0             # via imageio, imgaug, scikit-image
 protobuf==3.9.1           # via tensorboard, tensorflow
+pyparsing==2.4.2          # via matplotlib
+python-dateutil==2.8.0    # via matplotlib
+pywavelets==1.0.3         # via scikit-image
 pyyaml==5.1.2             # via keras
-requests==2.21.0
+scikit-image==0.15.0      # via imgaug
 scikit-learn==0.21.3      # via sklearn
-scipy==1.3.1              # via keras, scikit-learn
-six==1.12.0               # via absl-py, grpcio, h5py, keras, keras-preprocessing, protobuf, tensorboard, tensorflow
+scipy==1.3.1              # via imgaug, keras, scikit-image, scikit-learn
+shapely==1.6.4.post2      # via imgaug
+six==1.12.0               # via absl-py, cycler, grpcio, h5py, imgaug, keras, keras-preprocessing, protobuf, python-dateutil, tensorboard, tensorflow
 sklearn==0.0
 tensorboard==1.14.0       # via tensorflow
 tensorflow-estimator==1.14.0  # via tensorflow
 tensorflow==1.14.0
 termcolor==1.1.0          # via tensorflow
-urllib3==1.24.3           # via requests
 werkzeug==0.15.4          # via tensorboard
 wheel==0.33.6             # via tensorboard, tensorflow
 wrapt==1.11.2             # via tensorflow
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.2.0        # via markdown, protobuf, tensorboard
+# setuptools==41.2.0        # via kiwisolver, markdown, protobuf, tensorboard
